tests/samples/positive/pattern_matching/match_guarded_wildcard_falls_through.ax
module match_guarded_wildcard_falls_through;

enum Choice: u8 {
  one = 1,
  two = 2,
}

fn score(choice: Choice) -> i32 {
  return match choice {
    _ if false => 99,
    .one => 1,
    .two => 2,
  };
}

fn main() -> i32 {
  return score(Choice.one) - 1;
}
